--- a/app/src/main/res/layout/activity_entrega_paquete.xml
+++ b/app/src/main/res/layout/activity_entrega_paquete.xml
@@ -38,16 +38,40 @@
             android:background="@color/colordropdown"
             android:inputType="text"
            />
-
+        <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:id="@+id/GridLayout2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:context=".GridXMLActivity" >
         <EditText
             android:id="@+id/paquete"
             android:layout_height="40dp"
-            android:layout_width="match_parent"
+            android:layout_width="200dp"
             android:layout_margin="10dp"
             android:hint="Codigo del paquete"
             android:background="@color/colordropdown"
             android:inputType="text"
             />
+
+            <TextView
+                android:id="@+id/conteo"
+                android:layout_columnSpan="2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="0"
+                android:layout_marginLeft="5dp"
+                android:textSize="24dp"
+                android:textStyle="bold"
+                android:layout_gravity="center"
+                android:textColor="@color/colorAccent"
+                app:layout_constraintBottom_toTopOf="@id/button_first"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </GridLayout>
+
+
 
 
 
