--- a/app/src/main/res/layout/menu_layout.xml
+++ b/app/src/main/res/layout/menu_layout.xml
@@ -7,12 +7,11 @@
     tools:context=".Menu">
 
 
-
     <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="140dp"
-        android:src="@drawable/logo_ser_3"
         android:id="@+id/banner"
+        android:layout_width="match_parent"
+        android:layout_height="120dp"
+        android:src="@drawable/logo_ser_3"
         tools:ignore="MissingConstraints" />
 
 
@@ -20,9 +19,9 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="150dp"
+        android:layout_marginTop="120dp"
         android:id="@+id/buttonsLayout"
-        android:layout_toLeftOf="@+id/centerHorizont"
+        android:layout_toLeftOf="@+id/centerHorizontal"
         tools:ignore="MissingConstraints">
 
         <TextView
